@@ -4,6 +4,7 @@ Changes from 4.3.23 -> 4.3.24 (unreleased)
 * rev XXXX
 
 * Fix occasional crash in xymond when handling group names (Thanks, Franco Gasperino)
+* Fix non-special HTTP 1xx/3xx status codes red instead of yellow >.<
 
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
